C2: incorrect assertion predicate with short running long counted loop

XMLWordPrintable

    • b26
    • generic
    • generic

      ADDITIONAL SYSTEM INFORMATION :
      openjdk version "26-internal" 2026-03-17
      OpenJDK Runtime Environment (fastdebug build 26-internal-adhoc.User.jdk)
      OpenJDK 64-Bit Server VM (fastdebug build 26-internal-adhoc.User.jdk, mixed mode, sharing)

      OpenJDK 64-Bit Server VM (fastdebug 26-internal-adhoc.User.jdk) for windows-amd64 JRE (26-internal-adhoc.User.jdk), built on 2025-08-29T17:51:23Z with MS VC++ 16.10 / 16.11 (VS2019)

      A DESCRIPTION OF THE PROBLEM :
      C2 compiler causes an assert with some specific code.
      This problem does not happen with -XX:TieredStopAtLevel=3.

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      Run the program.

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      EXPECTED -
      Program completes.
      ACTUAL -
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error ([jdk]\src\hotspot\cpu\x86\macroAssembler_x86.cpp:442), pid=15132, tid=13576
      # fatal error: DEBUG MESSAGE: Initialized Assertion Predicate cannot fail
      #
      # JRE version: OpenJDK Runtime Environment (26.0) (fastdebug build 26-internal-adhoc.User.jdk)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 26-internal-adhoc.User.jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Problematic frame:
      # V [jvm.dll+0xce827e] MacroAssembler::debug64+0xce
      #
      # CreateCoredumpOnCrash turned off, no core file dumped
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Djava.file.encoding=UTF-8 -Dstderr.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -XX:-CreateCoredumpOnCrash -Dfile.encoding=UTF-8 -Duser.country=US -Duser.language=en -Duser.variant memseg.CompilerCrash

      --------------- S Y S T E M ---------------

      HostName: ****
      OS:
       Windows 10 , 64 bit Build 19041 (10.0.19041.5438)
      OS uptime: 0 days 10:52 hours

      CPU: total 12 (initial active 12) (6 cores per cpu, 2 threads per core) family 23 model 113 stepping 0 microcode 0x0, cx8, cmov, fxsr, ht, mmx, 3dnowpref, sse, sse2, sse3, ssse3, sse4a, sse4.1, sse4.2, popcnt, lzcnt, tsc, tscinvbit, avx, avx2, aes, clmul, bmi1, bmi2, adx, sha, fma, vzeroupper, clflush, clflushopt, clwb, rdtscp, rdpid, f16c
      Processor Information for the first 12 processors :
        Max Mhz: 3600, Current Mhz: 3600, Mhz Limit: 3600

      Memory: 4k page, system-wide physical 130997M (51957M free)
      TotalPageFile size 130997M (AvailPageFile size 48701M)
      current process WorkingSet (physical memory assigned to process): 138M, peak: 138M
      current process commit charge ("private bytes"): 2242M, peak: 2242M

      vm_info: OpenJDK 64-Bit Server VM (fastdebug 26-internal-adhoc.User.jdk) for windows-amd64 JRE (26-internal-adhoc.User.jdk), built on 2025-08-29T17:51:23Z with MS VC++ 16.10 / 16.11 (VS2019) 

        1. CompilerCrash.java
          3 kB
        2. pom.xml
          1 kB
        3. Test.java
          0.6 kB

            Assignee:
            Roland Westrelin
            Reporter:
            Mario Cadiz Olivares
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: