8366888: C2: incorrect assertion predicate with short running long counted loop

Co-authored-by: Christian Hagedorn <chagedorn@openjdk.org>
Reviewed-by: chagedorn, bmaillard